--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -49,7 +49,7 @@
   
   .viewer-wrapper {
     flex: 3; /* Allow it to grow and shrink more compared to the control component */
-    min-width: 450px; /* Ensure it doesn't get too small */
+    min-width: 300px; /* Ensure it doesn't get too small */
     box-sizing: border-box; /* Include padding and border in the element's total width and height */
   }
   
